# TRM-RESEARCH

./: .gitignore  HOW_IT_WORKS.md  README.md  debug_decode.py  main.py  pretokenize.py  pyproject.toml  test_decode_8cb.py  train.py  train_tts.py
config/: default.yaml
dataset/: __init__.py  audio_dataset.py  tts_dataset.py
models/: __init__.py  ema.py  mimi_wrapper.py  trm.py  tts_trm.py
