[project]
name = "trm-research"
version = "0.1.0"
description = "Tiny Recursive Model (TRM) for audio token prediction with Mimi codec"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "transformers>=4.45.1",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "soundfile>=0.12.0",
    pandas, 
    pyarrow
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
wandb = [
    "wandb>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["models", "dataset"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]
